<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rubito.androidcrud.AgregarActivity"
    tools:showIn="@layout/activity_agregar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAgregar"
            android:id="@+id/textAgregar"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textUser"
            android:id="@+id/textUser"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUser"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEmail"
            android:id="@+id/textViewEmail"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textPhone"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPhone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnSave"
            android:drawableLeft="@drawable/add"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegresar"
            android:id="@+id/btnRegresar"
            android:drawableRight="@drawable/list"/>
    </LinearLayout>

</RelativeLayout>
